# luxai

./: .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc  .replit  B1_COMPLETION_REPORT.md  B3_FINAL_REPORT.md  CLAUDE.md  DAILY_ROUTINE.md  DEPLOY_GUIDE.md  INTELLIGENCE_REPORT.md  LIVE_STATUS.md  Makefile  PRE_SHADOW_CHECKLIST.md  README.md  RECOVERY_REPORT.md  ROBUSTNESS_REPORT.md  SETTINGS_REPORT.md  SETUP.md  SHADOW_COMPLETION_REPORT.md  SHADOW_DAY7_REPORT.md  SHADOW_RUN_LOG.md  SHADOW_TRUTH_REPORT.md  SOP.md  WORKBENCH_COMPLETION_REPORT.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  gemini.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml  railway.toml
apps/api/src/: config.py  main.py
apps/api/src/agents/: __init__.py  trading_agents_adapter.py
apps/api/src/core/: __init__.py  auth.py  startup_checks.py  supabase.py
apps/api/src/data/: __init__.py  yfinance_client.py
apps/api/src/events/: bus.py  models.py  persistence.py
apps/api/src/governance/: engine.py  models.py  router.py
apps/api/src/memory/: embedding.py  models.py  router.py  service.py
apps/api/src/middleware/: auth.py  logging.py  request_id.py
apps/api/src/models/: __init__.py  agent.py  session.py
apps/api/src/options/: __init__.py  greeks.py  scorer.py  tradier_client.py
apps/api/src/routers/: agents.py  health.py  sessions.py  settings.py
apps/api/src/security/: middleware.py
apps/api/src/services/: __init__.py  supabase_service.py
apps/api/src/telemetry/: middleware.py  setup.py
apps/api/src/trading/: __init__.py  account_constraints.py  alpaca.py  broker.py  circuit_breaker.py  engine.py  idempotency.py  journal.py  kill_switch.py  learning.py  market_data.py  models.py  portfolio.py  position_lock.py  queue_monitor.py  regime.py  replay.py  risk.py  router.py  scanner.py  shadow.py
apps/api/src/websocket/: gateway.py  manager.py
apps/api/src/workbench/: __init__.py  calendar.py  recommender.py  router.py
apps/api/src/workflows/: engine.py  models.py  router.py
apps/api/tests/: conftest.py  test_account_constraints.py  test_auth.py  test_engine_safety.py  test_governance_auth.py  test_greeks.py  test_health_routes.py  test_idempotency.py  test_kill_switch.py  test_portfolio.py  test_position_lock.py  test_queue_monitor.py  test_regime.py  test_risk_engines.py  test_scanner_prefilter.py  test_scorer.py  test_settings.py  test_shadow_pnl.py  test_startup_checks.py  test_trading_agents_adapter.py  test_workbench_account_equity.py  test_yfinance_client.py
apps/orchestrator/: .env.example  Dockerfile  pyproject.toml
apps/orchestrator/src/: config.py  main.py
apps/orchestrator/src/agents/: __init__.py  base.py  critic.py  executor.py  researcher.py
apps/orchestrator/src/graphs/: __init__.py  supervisor.py
apps/orchestrator/src/memory/: manager.py
(+99 files in other folders)
