[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luxai-api"
version = "0.1.0"
description = "LuxAI FastAPI backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "supabase>=2.15.0",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.4.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "structlog>=25.2.0",
  "opentelemetry-api>=1.32.0",
  "opentelemetry-sdk>=1.32.0",
  "opentelemetry-instrumentation-fastapi>=0.53b0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "redis>=5.2.0",
  "anyio>=4.9.0",
  "websockets>=12.0",
  "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.1.0",
  "httpx>=0.28.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T20", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
