[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luxai-orchestrator"
version = "0.1.0"
description = "LuxAI LangGraph multi-agent orchestration service"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "langgraph>=0.4.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-community>=0.3.0",
  "langsmith>=0.3.0",
  "openai>=1.79.0",
  "anthropic>=0.52.0",
  "httpx>=0.28.0",
  "redis>=5.2.0",
  "structlog>=25.2.0",
  "anyio>=4.9.0",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T20", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "PLR0913", "COM812"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
